httpserver-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver-vs
spec:
  hosts:
  - "*"
  gateways:
  - httpserver-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpserver
        port:
          number: 80
